[package]
name = "markpsd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lopdf = {version="0.31.0", features=["pom_parser", "nom_parser", "embed_image"]}
aws-config = "0.56.0"
aws-sdk-s3 = "0.29.0"
aws-sdk-secretsmanager = "0.30.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = {version = "0.7.10"}
